fix spacing style

--- a/src/components/Forms/ProfileForm/ProfileForm.scss
+++ b/src/components/Forms/ProfileForm/ProfileForm.scss
@@ -54,7 +54,8 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         justify-content: center;
-        column-gap: var(--form-col-spacing);
+        column-gap: 10px;
+        row-gap: 10px;
 
         .imageField {
           width: var(--highlight-image-width);
